--- a/sw/betrusted-hal/Cargo.toml
+++ b/sw/betrusted-hal/Cargo.toml
@@ -10,3 +10,5 @@ edition = "2018"
 betrusted-pac = { path = "../betrusted-pac" }
 embedded-graphics = { path = "../embedded-graphics/embedded-graphics" }
 spin = "0.5.2"
+bitflags = "1.2.1"
+volatile = "0.2.6"
