--- a/.gitmodules
+++ b/.gitmodules
@@ -18,14 +18,14 @@
 	url = https://github.com/xobs/lxsocdoc.git
 [submodule "sw/embedded-graphics"]
 	path = sw/embedded-graphics
-	url = git@github.com:betrusted-io/embedded-graphics.git
+	url = https://github.com/betrusted-io/embedded-graphics.git
 	branch = master
 [submodule "deps/encrypt-bitstream-python"]
 	path = deps/encrypt-bitstream-python
-	url = git@github.com:betrusted-io/encrypt-bitstream-python.git
+	url = https://github.com/betrusted-io/encrypt-bitstream-python.git
 [submodule "deps/rom-locate"]
 	path = deps/rom-locate
-	url = git@github.com:betrusted-io/rom-locate.git
+	url = https://github.com/betrusted-io/rom-locate.git
 [submodule "deps/opentitan"]
 	path = deps/opentitan
-	url = https://github.com/lowRISC/opentitan.git
+	url = https://github.com/betrusted-io/opentitan.git
