--- a/.gitmodules
+++ b/.gitmodules
@@ -16,8 +16,8 @@
 [submodule "deps/lxsocdoc"]
 	path = deps/lxsocdoc
 	url = https://github.com/xobs/lxsocdoc.git
-[submodule "sw/embedded-graphics"]
-	path = sw/embedded-graphics
+[submodule "fw/embedded-graphics"]
+	path = fw/embedded-graphics
 	url = https://github.com/betrusted-io/embedded-graphics.git
 	branch = master
 [submodule "deps/encrypt-bitstream-python"]
