--- a/.gitignore
+++ b/.gitignore
@@ -17,10 +17,10 @@ target/
 test/
 
 # betrusted-pac is auto-generated
-sw/betrusted-pac/
+fw/betrusted-pac/
 
 # this is an auto-generated library file by 'deps/rom-locate/key2bits.py -c'
-sw/rom-inject/src/lib.rs
+fw/rom-inject/src/lib.rs
 
 # these are the user-local fuse ROM keys. my.nky is the input, encrypted.nky is the output (which has HMAC and IV folded in)
 my.nky
