--- a/fw/Cargo.toml
+++ b/fw/Cargo.toml
@@ -24,3 +24,8 @@ rom-inject = { path = "rom-inject" }
 codegen-units = 1 # better optimizations
 debug = true # symbols are nice and they don't increase the size on Flash
 lto = true # better optimizations
+
+[features]
+dvt = ["jtag/dvt"]
+evt = ["jtag/evt"]
+default = ["evt"]
