add key mapping for DVT, and DVT build flags

--- a/.gitmodules
+++ b/.gitmodules
@@ -42,3 +42,6 @@
 	path = deps/gateware
 	url = https://github.com/betrusted-io/gateware.git
 	branch = master
+[submodule "deps/valentyusb"]
+	path = deps/valentyusb
+	url = https://github.com/im-tomu/valentyusb.git
