--- a/.gitmodules
+++ b/.gitmodules
@@ -44,4 +44,4 @@
 	branch = master
 [submodule "deps/valentyusb"]
 	path = deps/valentyusb
-	url = https://github.com/im-tomu/valentyusb.git
+	url = https://github.com/betrusted-io/valentyusb.git
