switch default build to DVT for testing firmware

--- a/fw/Cargo.toml
+++ b/fw/Cargo.toml
@@ -28,4 +28,4 @@ lto = true # better optimizations
 [features]
 dvt = ["jtag/dvt", "betrusted-hal/dvt"]
 evt = ["jtag/evt", "betrusted-hal/evt"]
-default = ["evt"]
+default = ["dvt"]
