--- a/fw/Cargo.toml
+++ b/fw/Cargo.toml
@@ -20,6 +20,10 @@ jtag = { path = "jtag" }
 xous-nommu = { path = "xous-nommu" }
 rom-inject = { path = "rom-inject" }
 
+[dependencies.double-ratchet]
+path = "signal-rs/double-ratchet"
+default-features = false
+
 [profile.release]
 codegen-units = 1 # better optimizations
 debug = true # symbols are nice and they don't increase the size on Flash
