add double-ratchet test routine. takes 687ms to run.

--- a/fw/Cargo.toml
+++ b/fw/Cargo.toml
@@ -19,6 +19,7 @@ efuse-api = { path = "efuse-api" }
 jtag = { path = "jtag" }
 xous-nommu = { path = "xous-nommu" }
 rom-inject = { path = "rom-inject" }
+signal-common = { path = "signal-rs/signal-common" }
 
 [dependencies.double-ratchet]
 path = "signal-rs/double-ratchet"
