implement SHA512 and SHA512/256 APIs as Rust `hmac` traits
This allows us to plug the hardware accelerator in by just
changing out the `use` statement at the top of the library file.

--- a/fw/signal-rs/double-ratchet/Cargo.toml
+++ b/fw/signal-rs/double-ratchet/Cargo.toml
@@ -13,9 +13,10 @@ hashbrown = "0.8"
 
 signal-common = { path = "../signal-common" }
 
-[dependencies.sha2]
-version = "0.9"
-default-features = false
+#[dependencies.sha2]
+#version = "0.9"
+#default-features = false
+betrusted-hal = { path = "../../betrusted-hal" }
 
 [dependencies.orion]
 version = "0.15.2"
