commit changes to facilitate running of RNG tests
NOTE: this causes a long boot delay due to the nature of
how we harness the device for testing. This should be eliminated
of course in production

--- a/fw/Cargo.toml
+++ b/fw/Cargo.toml
@@ -21,6 +21,7 @@ xous-nommu = { path = "xous-nommu" }
 rom-inject = { path = "rom-inject" }
 signal-common = { path = "signal-rs/signal-common" }
 digest = "0.9"
+volatile = "0.2.6"
 
 [dependencies.double-ratchet]
 path = "signal-rs/double-ratchet"
