--- a/fw/signal-rs/double-ratchet/Cargo.toml
+++ b/fw/signal-rs/double-ratchet/Cargo.toml
@@ -17,6 +17,8 @@ signal-common = { path = "../signal-common" }
 #version = "0.9"
 #default-features = false
 betrusted-hal = { path = "../../betrusted-hal" }
+betrusted-pac = { path = "../../betrusted-pac" }
+pac = { package = "betrusted-pac" }
 
 [dependencies.orion]
 version = "0.15.2"
@@ -27,14 +29,16 @@ version = "0.7"
 default-features = false
 
 [dependencies.x25519-dalek]
-version = "0.6"
+path = "../../x25519-dalek"
+#version = "0.6"
 default-features = false
 features = ["u32_backend"]
 
 [dependencies.curve25519-dalek]
-version = "2"
+path = "../../curve25519-dalek"
 default-features = false
 features = ["u32_backend"]
+#version = "2"
 
 [dependencies.ed25519-dalek]
 version = "1.0.0-pre.3"
