--- a/fw/signal-rs/x3dh/Cargo.toml
+++ b/fw/signal-rs/x3dh/Cargo.toml
@@ -22,14 +22,16 @@ version = "0.7"
 default-features = false
 
 [dependencies.x25519-dalek]
-version = "0.6"
+path = "../../x25519-dalek"
+#version = "0.6"
 default-features = false
 features = ["u32_backend"]
 
 [dependencies.curve25519-dalek]
-version = "2"
+path = "../../curve25519-dalek"
 default-features = false
 features = ["u32_backend"]
+#version = "2"
 
 [dependencies.ed25519-dalek]
 version = "1.0.0-pre.3"
