--- a/fw/jtag/Cargo.toml
+++ b/fw/jtag/Cargo.toml
@@ -12,6 +12,6 @@ alloc-riscv = { path = "../alloc-riscv" }
 betrusted-pac = { path = "../betrusted-pac" }
 
 [features]
-#evt = []
+evt = []
 dvt = []
 pvt = []
