--- a/.gitmodules
+++ b/.gitmodules
@@ -36,7 +36,7 @@
 [submodule "deps/valentyusb"]
 	path = deps/valentyusb
 	url = https://github.com/betrusted-io/valentyusb.git
-	branch = fastclk
+	branch = burst-support
 [submodule "deps/pythondata-cpu-vexriscv"]
 	path = deps/pythondata-cpu-vexriscv
 	url = https://github.com/betrusted-io/pythondata-cpu-vexriscv.git
