--- a/boot/Cargo.toml
+++ b/boot/Cargo.toml
@@ -11,7 +11,10 @@ resolver = "2"
 
 [profile.release]
 codegen-units = 1 # 1 better optimizations
-debug = true # symbols are nice and they don't increase the size on Flash
+debug = false
 lto = "fat"
+opt-level = 'z'  # Optimize for size instead of performance
 #panic = "abort" # Remove panic output, which can reduce file size
-#opt-level = 'z'  # Optimize for size instead of performance
+
+# prefer hardware-accelerated versions of services
+sha2 = {path = "./engine-sha512", package = "engine-sha512"}
