--- a/boot/Cargo.toml
+++ b/boot/Cargo.toml
@@ -42,5 +42,6 @@ features = ["u32e_backend"]
 codegen-units = 1 # 1 better optimizations
 debug = false
 lto = "fat"
-opt-level = 'z'  # Optimize for size instead of performance
-#panic = "abort" # Remove panic output, which can reduce file size
+opt-level = 's'  # Optimize for size instead of performance
+panic = "abort" # Remove panic output, which can reduce file size
+strip = true
