make secure boot optional, so we aren't gated by that initially

--- a/boot/betrusted-boot/Cargo.toml
+++ b/boot/betrusted-boot/Cargo.toml
@@ -15,16 +15,19 @@ branch="main"
 version = "3.1.0" # note this is patched to our fork in ./Cargo.toml
 default-features = false
 features = ["u32e_backend"]
+optional = true
 
 [dependencies.ed25519-dalek]
 version="1.0.1"
 #path = "../../../ed25519-dalek"
 default-features = false
+optional = true
 
 [features]
 debug-print = []
 small-soc = []
 # default = ["debug-print", "small-soc"]
+hw-sec = ["curve25519-dalek", "ed25519-dalek"]
 default = []
 
 [target.'cfg(not(any(windows, unix)))'.dependencies]
