--- a/boot/betrusted-boot/Cargo.toml
+++ b/boot/betrusted-boot/Cargo.toml
@@ -28,6 +28,7 @@ debug-print = []
 small-soc = []
 # default = ["debug-print", "small-soc"]
 hw-sec = ["curve25519-dalek", "ed25519-dalek"]
+sim = []
 default = []
 
 [target.'cfg(not(any(windows, unix)))'.dependencies]
