--- a/boot/betrusted-boot/Cargo.toml
+++ b/boot/betrusted-boot/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [dependencies]
 utralib = {path = "../utralib"}
-funty = {version = "2.0.0", default-features = false}
+# funty = {version = "2.0.0", default-features = false}
 
 [dependencies.com_rs]
 git="https://github.com/betrusted-io/com_rs"
