move scala sources to a more canonical location for scala projects
this helps IDEs pick up the project structure better

also add .gitignore for stuff associated with the intellij IDE;
scala does not work well with vscode, so we have to use the intellij
IDE to navigate the Scala sources

A bit inconvenient, but worth it - I'm now able to much more easily
understand the project structure now that the IDE is helping me
instead of fighting me.

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,12 @@ xous/xous-kernel.bin
 # Spinal build directories
 VexRiscv/project/
 VexRiscv/target/
+VexRiscv/.bloop/
+VexRiscv/.bsp/
+VexRiscv/.idea/
+VexRiscv/.metals/
+VexRiscv/.vscode/
+
+.metals/
+.env
+.vscode/
