refactor PIO so it is domiciled in xous-cramium
this will allow faster re-use of the files once we get to
production.

also fixed a silly bug in the loader "bare iron" tester
where we were overwriting the page table but somehow
that didn't manifest until we had a TLB flush forced
by large code size. heh.

--- a/boot/betrusted-boot/Cargo.toml
+++ b/boot/betrusted-boot/Cargo.toml
@@ -7,8 +7,7 @@ edition = "2018"
 [dependencies]
 utralib = {path = "../utralib"}
 riscv = { version = "0.5.6", package = "xous-riscv" }
-pio-proc = "0.2.2"
-pio = "0.2.1"
+xous-pio = {path="../../../xous-cramium/libs/xous-pio", optional=true, default-features=false, features=["tests", "cramium-soc"]}
 
 [dependencies.com_rs]
 git="https://github.com/betrusted-io/com_rs"
@@ -30,11 +29,11 @@ optional = true
 debug-print = []
 small-soc = []
 ahb-test = []
-pio-test = []
+pio-test = ["xous-pio"]
 # default = ["debug-print", "small-soc"]
 hw-sec = ["curve25519-dalek", "ed25519-dalek"]
 sim = []
-default = ["sim", "pio-test"]
+default = ["sim"]
 
 [target.'cfg(not(any(windows, unix)))'.dependencies]
 utralib = { path = "../utralib"}
