--- a/boot/betrusted-boot/Cargo.toml
+++ b/boot/betrusted-boot/Cargo.toml
@@ -15,8 +15,9 @@ small-soc = []
 daric = []
 pio-test = ["xous-pio"]
 # default = ["debug-print", "small-soc"]
-sim = []
-default = ["sim", "daric"]
+gdb-load = []  # set VM mapping 1:1 for code space for JTAG loading so that GDB is not confused by the VM offset
+arty = []
+default = ["daric"]
 
 [target.'cfg(not(any(windows, unix)))'.dependencies]
 utralib = { path = "../utralib"}
