commit changes to config to target the soc build
Now, the distinction between SoC vs FPGA is as follows

- SoC builds closely match the production hardware, including
proprietary blocks that we don't have in our tree. This means
it is increasingly difficult to simulate SoC builds locally.
However, it means that simulations on the production cluster
are more accurate, so this is a reasonable trade-off when pushing
toward tape-out.

- FPGA builds track what can go onto the Arty platform. This
tries to be somewhat close to the SoC builds but things like
the clock generator and some of the PHY blocks are just going
to be different because these are platform-specific IP blocks.

--- a/boot/betrusted-boot/Cargo.toml
+++ b/boot/betrusted-boot/Cargo.toml
@@ -20,7 +20,7 @@ arty = []
 full-chip = [] # create a file suitable for simulating on the full chip (does not target an "local" validation features)
 xip = []
 apb-test = []
-default = ["daric", "full-chip"]
+default = ["daric"]
 
 [target.'cfg(not(any(windows, unix)))'.dependencies]
 utralib = { path = "../utralib"}
