update excludes for check-in

--- a/.gitignore
+++ b/.gitignore
@@ -46,5 +46,13 @@ listings/
 
 # files that shouldn't be checked into github
 do_not_checkin/
-soc-mpw/
+soc_mpw/
 
+# files under review for checking into github
+soc_oss/common
+soc_oss/ips
+soc_oss/rtl
+soc_oss/tb
+# this is the contents of soc_oss as taped out. Small modifications
+# are made to files in soc_oss to make automated documentation easier.
+soc_oss_tapeout/
