--- a/boot/betrusted-boot/Cargo.toml
+++ b/boot/betrusted-boot/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [dependencies]
 utralib = {path = "../utralib"}
 riscv = { version = "0.5.6", package = "xous-riscv" }
-xous-bio = {path="../../../xous-core/libs/xous-bio", default-features=false, features=["tests", "cramium-soc", "baremetal"]}
+# xous-bio = {path="../../../xous-core/libs/xous-bio", default-features=false, features=["tests", "cramium-soc", "baremetal"]}
 xous-pio = {path="../../../xous-core/libs/xous-pio", default-features=false, features=["tests", "cramium-soc", "baremetal"]}
 xous-pl230 = {path="../../../xous-core/libs/xous-pl230", optional=true, default-features=false, features=["tests", "cramium-soc", "baremetal"]}
 pio-proc = "0.2.2"
@@ -27,6 +27,7 @@ cram-fpga = [] # target the cramium FPGA dev board instead of the SoC
 xip = []
 apb-test = []
 pl230-test = ["xous-pl230"]
+quanta-test = []
 default = ["daric"]
 
 [target.'cfg(not(any(windows, unix)))'.dependencies]
