commit boot changes
we're going to stop using this as the source of tests, see the
nto-tests directory now for the source of all SoC tests.

--- a/boot/betrusted-boot/Cargo.toml
+++ b/boot/betrusted-boot/Cargo.toml
@@ -33,7 +33,7 @@ boot-delay = []
 sram-margin = []
 rram-testing = [] # used to try and help debug/bringup RRAM issues
 simulation = []
-default = ["daric", "pl230-test", "boot-delay", "sram-margin"]
+default = ["daric", "pl230-test", "bio-test"]
 
 [target.'cfg(not(any(windows, unix)))'.dependencies]
 utralib = { path = "../utralib"}
